--- a/ar-testing/index.html
+++ b/ar-testing/index.html
@@ -99,7 +99,8 @@
     scene.add(markerRoot)
     var artoolkitMarker = new THREEx.ArMarkerControls(arToolkitContext, markerRoot, {
       type : 'pattern',
-      patternUrl : THREEx.ArToolkitContext.baseURL + './data/patt.hiro'
+      patternUrl : THREEx.ArToolkitContext.baseURL + './data/marker-test.patt'
+      //patternUrl : THREEx.ArToolkitContext.baseURL + './data/patt.hiro'
       // patternUrl : THREEx.ArToolkitContext.baseURL + './data/patt.kanji'
     })
     // build a smoothedControls
